metadata/force-app/main/default/objects/CustomName_NeCbt__c/CustomName_NeCbt__c.object-meta.xml
<CustomObject>
    <description>Description_FqsWf</description>
    <label>CustomLabel_wcegK</label>
    <nameField>
        <label>CustomLabel_wcegK</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_wcegKs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>