metadata/force-app/main/default/objects/CustomName_NeCbt__c/fields/CustomField_IXlzT__c.field-meta.xml
<CustomField>
    <fullName>CustomField_IXlzT__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldWXnaO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>