metadata/force-app/main/default/objects/CustomName_NeCbt__c/fields/CustomField_jIJbC__c.field-meta.xml
<CustomField>
    <fullName>CustomField_jIJbC__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldXlUHM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>