metadata/force-app/main/default/objects/CustomName_NeCbt__c/fields/CustomField_wePOk__c.field-meta.xml
<CustomField>
    <fullName>CustomField_wePOk__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldHQaoX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>