metadata/force-app/main/default/objects/CustomName_NeCbt__c/fields/CustomField_XJeXc__c.field-meta.xml
<CustomField>
    <fullName>CustomField_XJeXc__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldqMSzl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>