metadata/force-app/main/default/objects/CustomName_NeCbt__c/fields/CustomField_zADXs__c.field-meta.xml
<CustomField>
    <fullName>CustomField_zADXs__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldhVUVt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>